--- a/assets/scss/theme/_home.scss
+++ b/assets/scss/theme/_home.scss
@@ -471,6 +471,7 @@
         font-size: 1.25rem;
         color: $theme-color-primary;
         margin-bottom: 0.5rem;
+        white-space: nowrap;
       }
       .profile {
         margin-top: 0.5rem;
